@@ -1,5 +1,6 @@
 Changes for 1.4.j:
 
+ - support of storage of log files in UTF8 encoding (Alexei)
  - increased size of triggers.expression to 1023 (Alexei)
 
 Changes for 1.4.3:
